"""forge — generic forge contract (ForgeService) + GitHub/GitLab adapters.

Single crate at the repo root. The proto is compiled by build.rs (tonic-build)
under a cargo_build_script; protoc comes from @protobuf. `@forge//:forge` is the
rust_library other fastverk modules (e.g. wave) depend on."""

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@crates//:defs.bzl", "all_crate_deps")

package(default_visibility = ["//visibility:public"])

exports_files(["MODULE.bazel"])

cargo_build_script(
    name = "build_script",
    srcs = ["build.rs"],
    data = ["//proto/forge/v1:forge.proto"],
    edition = "2021",
    build_script_env = {
        "PROTOC": "$(execpath @protobuf//:protoc)",
    },
    tools = ["@protobuf//:protoc"],
    deps = all_crate_deps(build = True),
)

rust_library(
    name = "forge",
    srcs = glob(["src/**/*.rs"]),
    crate_root = "src/lib.rs",
    edition = "2021",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    deps = [":build_script"] + all_crate_deps(normal = True),
)

rust_test(
    name = "forge_test",
    crate = ":forge",
    edition = "2021",
)
