# forge — generic forge contract (ForgeService) + GitHub/GitLab adapters.
#
# The operations a code-hosting forge (GitHub, GitLab, …) provides that a
# cross-repo cascade needs: read a default branch + file, branch, commit, open a
# change (PR/MR), enable auto-merge, poll the pipeline, merge, read state. Modeled
# once as a proto `ForgeService`; consumed in-process via the async `Forge` trait.
#
# Rust-via-Cargo-AND-Bazel: the proto is compiled by build.rs (tonic-build) under
# a cargo_build_script, so the only Bazel codegen dep is protobuf (for protoc).
module(
    name = "forge",
    version = "0.0.2",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "protobuf", version = "33.4")

# Hermetic CC toolchain via zig cc — cross-compiles the forge-gateway rust binary
# to linux/amd64 (glibc gnu.2.28) for the OCI image, on any host. Same as
# botnoc/agents.
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")

zig_toolchains = use_extension(
    "@hermetic_cc_toolchain//toolchain:ext.bzl",
    "toolchains",
)
use_repo(zig_toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_gnu.2.28",
    "@zig_sdk//toolchain:linux_arm64_gnu.2.28",
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    # Linux targets so the forge-gateway image cross-compiles off a Mac / on RBE.
    extra_target_triples = [
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",
    ],
    versions = ["1.95.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension(
    "@rules_rust//crate_universe:extension.bzl",
    "crate",
    isolate = True,
)
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")

# ── Container image (rules_oci) for the forge-gateway daemon ──────────────────
# Packages //:forge-gateway into a distroless OCI image via //tools/oci. Built on
# the RBE (--config=rbe); the runner pushes //:forge-gateway-image_push to ECR.
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# distroless/cc (glibc + ca-certs) base — the zig gnu.2.28 rust binary links glibc
# dynamically, so distroless/static won't link. Same digest botnoc/agents pin.
oci.pull(
    name = "distroless_cc",
    digest = "sha256:6714977f9f02632c31377650c15d89a7efaebf43bab0f37c712c30fc01edb973",
    image = "gcr.io/distroless/cc-debian12",
    platforms = ["linux/amd64"],
)
use_repo(oci, "distroless_cc", "distroless_cc_linux_amd64")

# Dev-only.
bazel_dep(name = "rules_shell", version = "0.6.1", dev_dependency = True)
bazel_dep(name = "stardoc", version = "0.7.2", dev_dependency = True)
